--- a/Pinger/Pinger.vcxproj.filters
+++ b/Pinger/Pinger.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Stats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TaskBarIcon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Stats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskBarIcon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
