--- a/Pinger/Pinger.vcxproj
+++ b/Pinger/Pinger.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="Ping.h" />
     <ClInclude Include="TaskBarIcon.h" />
+    <ClInclude Include="Version.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
