--- a/Pinger/Pinger.vcxproj.filters
+++ b/Pinger/Pinger.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="TaskBarIcon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
