--- a/Pinger/Pinger.vcxproj
+++ b/Pinger/Pinger.vcxproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="Stats.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Ping.h" />
@@ -28,6 +29,10 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Pinger.rc" />
+    <ResourceCompile Include="icon.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="main.ico" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
