--- a/Pinger/Pinger.vcxproj
+++ b/Pinger/Pinger.vcxproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="resIcon.h" />
     <ClInclude Include="resVersion.h" />
     <ClInclude Include="Stats.h" />
