--- a/Pinger/Pinger.vcxproj.filters
+++ b/Pinger/Pinger.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="resVersion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc">
